修改FileResourceController的encodeFilename方法